# paper-boy-news

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  SETUP-GUIDE.md  config.example.yaml  pyproject.toml  railway.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-newspaper.yml  ci.yml  codeql.yml  supabase-migrate.yml
.streamlit/: secrets.example.toml
api/: .env.example  CLAUDE.md  Dockerfile  auth.py  main.py  models.py
api/routes/: build.py  deliver.py  feeds.py  smtp_test.py
cron-worker/: README.md  env.d.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
cron-worker/src/: index.ts
cron-worker/test/: worker.test.ts
docs/: DEPLOYMENT.md  SOURCE-BUDGET-ROADMAP.md
legacy/api/: CLAUDE.md  requirements.txt
scripts/: build_for_users.py  check_migrations.py  epub_stats.py  requirements.txt  rescue_stuck_built_records.py  seed_feed_stats.py
src/paper_boy/: CLAUDE.md  __init__.py  cli.py  (+10 more)
supabase/: config.toml  seed.sql
tests/: CLAUDE.md  conftest.py  test_api_deliver.py  test_build_for_users.py  test_cache.py  test_check_migrations.py  test_cli.py  test_config.py  test_cover.py  test_delivery.py  test_email_template.py  test_epub.py  test_feeds.py  test_filters.py  test_images.py  test_main.py  test_rescue_stuck_built_records.py  test_workflows.py
web/: .env.example  .env.local.example  CLAUDE.md  TODO.md  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
web-next/: CLAUDE.md  TODO.md  drizzle.config.ts  package.json  pnpm-lock.yaml
(+201 files in other folders)
